asignacion de coordenadas agregada

--- a/Entradas/.classpath
+++ b/Entradas/.classpath
@@ -8,7 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -18,5 +17,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="/JXInput"/>
+	<classpathentry kind="lib" path="lib/jxinput-1.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
