--- a/Entradas/pom.xml
+++ b/Entradas/pom.xml
@@ -15,6 +15,13 @@
       </plugin>
     </plugins>
   </build>
+  
+  <repositories>
+      <repository>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
+      </repository>
+  </repositories>
       <dependencies>
 <dependency>
     <groupId>org.jfree</groupId>
@@ -25,6 +32,16 @@
     <groupId>nz.ac.waikato.cms.weka</groupId>
     <artifactId>weka-stable</artifactId>
     <version>3.8.6</version>
+</dependency>
+<dependency>
+    <groupId>com.github.strikerx3</groupId>
+    <artifactId>jxinput</artifactId>
+    <version>1.0.0</version>
+</dependency>
+<dependency>
+    <groupId>org.netbeans.external</groupId>
+    <artifactId>AbsoluteLayout</artifactId>
+    <version>RELEASE65</version>
 </dependency>
     </dependencies>
 </project>
